--- a/angular/package.json
+++ b/angular/package.json
@@ -22,6 +22,8 @@
     "@angular/platform-browser": "~13.3.0",
     "@angular/platform-browser-dynamic": "~13.3.0",
     "@angular/router": "~13.3.0",
+    "material-icons": "^1.13.12",
+    "moment": "^2.29.4",
     "rxjs": "~7.5.0",
     "single-spa": ">=4.0.0",
     "single-spa-angular": "^6.3.1",
